[package]
name = "jokeGreeting"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
